--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ gltfアニメ再生用-->
 
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
-<a-camera>
+<a-entity camera>
 <a-cursor></a-cursor>
-</a-camera>
+</a-entity>
 
 
   <!--
