--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@ https://opensource.org/licenses/mit-license.php
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 <link rel="stylesheet" href="style.css" />
 <title>My first VR site</title>
-<script src="./js/aframe-v0.8.2.min.js"></script>
+ <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<!--script src="./js/aframe-v0.8.2.min.js"></script-->
 <!-- script src="./js/animation-mixer.js"></script>
 gltfアニメ再生用-->
-<script src="./js/aframe-extras.loaders.min.js"></script>
-<script src="./js/aframe-ar.min.js"></script>
+<!--script src="./js/aframe-extras.loaders.min.js"></script-->
+<!--script src="./js/aframe-ar.min.js"></script-->
 </head>
 
 <body class="a-body">
