--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ https://opensource.org/licenses/mit-license.php
 <title>My first VR site</title>
  <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
+  <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
 <!--script src="./js/aframe-v0.8.2.min.js"></script-->
 <!-- script src="./js/animation-mixer.js"></script>
 gltfアニメ再生用-->
@@ -27,16 +29,23 @@ gltfアニメ再生用-->
 </head>
 
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="" embedded arjs="debugUIEnabled:false;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="" embedded arjs="debugUIEnabled:false;" vr-mode-ui="enabled: false">
+  <!--embedded arjs="sourceType: webcam;"-->
 
 
 <a-assets>
+  <a-asset-item id="model" src="./gltf/Pagoda.glb"></a-asset-item>
 </a-assets>
 
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
-<a-entity link="href: https://www.google.co.jp"></a-entity>
+
+<a-entity gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer link="href: https://www.google.co.jp"></a-entity>
+<a-entity ></a-entity>
 </a-marker>
+
+<a-text value="test" position=" -0.3 0 0.5" align="center" rotation="-90 0 0" color="#7993ff">
+</a-text>
 
 <!-- directional light shining from the top left.-->
 <!-- a-light color="white" position="-1 1 0" intensity="3" ></a-light-->
