--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ gltfアニメ再生用-->
 </head>
 
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="" embedded arjs="debugUIEnabled:false;" vr-mode-ui="enabled: false">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer link="href: https://www.google.co.jp"></a-entity>
+<a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="href: https://www.google.co.jp"></a-entity>
 <a-entity ></a-entity>
 </a-marker>
 
@@ -56,7 +56,7 @@ gltfアニメ再生用-->
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
 <a-entity camera>
-<a-cursor></a-cursor>
+<a-cursor fuse="true" fuse-timeout="3000" color="black" scale="2 2">
 </a-entity>
 
 
@@ -83,4 +83,14 @@ gltfアニメ再生用-->
   </a-cube>
  -->
 
-</a-scene></body></html>
+</a-scene>
+<script>
+  var linkElements = document.getElementsByClassName("link-object");
+  for (var i = 0; i < linkElements.length; i++) {
+    linkElements[i].addEventListener('click', function() {
+      var link = this.getAttribute('data-link');
+      location.href = link;
+    }, false);
+  }
+</script>
+</body></html>
