--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ gltfアニメ再生用-->
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
 <a-entity camera>
-<a-cursor fuse="true" fuse-timeout="3000" color="black" scale="2 2">
+<a-cursor fuse="true" fuse-timeout="3000" color="black" scale="2 2"></a-cursor>
 </a-entity>
 
 
