--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="href: https://www.google.co.jp"></a-entity>
+<a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="https://www.google.co.jp"></a-entity>
 <a-entity ></a-entity>
 </a-marker>
 
@@ -56,9 +56,11 @@ gltfアニメ再生用-->
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
 <a-entity camera>
-<a-cursor fuse="true" fuse-timeout="3000" color="black" scale="2 2"></a-cursor>
+<a-cursor></a-cursor>
 </a-entity>
 
+
+<!--fuse="true" fuse-timeout="3000" color="black" scale="2 2"-->
 
   <!--
 <a-box id="target1" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
