--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ gltfアニメ再生用-->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
 <a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="https://www.google.co.jp"></a-entity>
-<a-entity ></a-entity>
 </a-marker>
 
 <a-text value="test" position=" -0.3 0 0.5" align="center" rotation="-90 0 0" color="#7993ff">
@@ -86,7 +85,7 @@ gltfアニメ再生用-->
  -->
 
 </a-scene>
-<script>
+<!--script>
   var linkElements = document.getElementsByClassName("link-object");
   for (var i = 0; i < linkElements.length; i++) {
     linkElements[i].addEventListener('click', function() {
@@ -94,5 +93,5 @@ gltfアニメ再生用-->
       location.href = link;
     }, false);
   }
-</script>
+</script-->
 </body></html>
