--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="https://www.google.co.jp"></a-entity>
+<a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" data-link="https://www.google.co.jp" animation-mixer></a-entity>
 </a-marker>
 
 <a-text value="test" position=" -0.3 0 0.5" align="center" rotation="-90 0 0" color="#7993ff">
