--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity class="link-object"　gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer></a-entity>
-<!--data-link="https://www.google.co.jp"-->
+<a-entity gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="href: https://www.google.co.jp"></a-entity>
+<a-entity ></a-entity>
 </a-marker>
 
 <a-text value="test" position=" -0.3 0 0.5" align="center" rotation="-90 0 0" color="#7993ff">
@@ -56,11 +56,9 @@ gltfアニメ再生用-->
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
 <a-entity camera>
-<a-cursor></a-cursor>
+<a-cursor fuse="true" fuse-timeout="3000" color="black" scale="2 2">
 </a-entity>
 
-
-<!--fuse="true" fuse-timeout="3000" color="black" scale="2 2"-->
 
   <!--
 <a-box id="target1" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
@@ -85,14 +83,4 @@ gltfアニメ再生用-->
   </a-cube>
  -->
 
-</a-scene>
-<!--script>
-  var linkElements = document.getElementsByClassName("link-object");
-  for (var i = 0; i < linkElements.length; i++) {
-    linkElements[i].addEventListener('click', function() {
-      var link = this.getAttribute('data-link');
-      location.href = link;
-    }, false);
-  }
-</script-->
-</body></html>
+</a-scene></body></html>
