--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" scale="0.1 0.1 0.1" animation-mixer data-link="href: https://www.google.co.jp"></a-entity>
+<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" animation-mixer data-link="https://www.google.co.jp"></a-entity>
 <a-entity ></a-entity>
 </a-marker>
 
@@ -83,4 +83,15 @@ gltfアニメ再生用-->
   </a-cube>
  -->
 
-</a-scene></body></html>
+</a-scene>
+<script>
+  var linkElements = document.getElementsByClassName("link-object");
+  for (var i = 0; i < linkElements.length; i++) {
+    linkElements[i].addEventListener('click', function() {
+      var link = this.getAttribute('data-link');
+      location.href = link;
+    }, false);
+  }
+</script>
+</body>
+</html>
