--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" animation-mixer data-link="https://www.google.co.jp"></a-entity>
+<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" animation-mixer link="href:https://www.google.co.jp"></a-entity>
 <a-entity ></a-entity>
 </a-marker>
 
@@ -88,7 +88,7 @@ gltfアニメ再生用-->
   var linkElements = document.getElementsByClassName("link-object");
   for (var i = 0; i < linkElements.length; i++) {
     linkElements[i].addEventListener('click', function() {
-      var link = this.getAttribute('data-link');
+      var link = this.getAttribute('link');
       location.href = link;
     }, false);
   }
