--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" animation-mixer link="href:https://www.google.co.jp"></a-entity>
+<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" animation-mixer></a-entity>
+<!--link="href:https://www.google.co.jp"-->
 <a-entity ></a-entity>
 </a-marker>
 
@@ -56,7 +57,7 @@ gltfアニメ再生用-->
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
 <a-entity camera>
-<a-cursor fuse="true" fuse-timeout="3000" color="black" scale="2 2"></a-cursor>
+<a-cursor fuse="true" fuse-timeout="10000" color="black" scale="2 2"></a-cursor>
 </a-entity>
 
 
@@ -89,7 +90,7 @@ gltfアニメ再生用-->
   for (var i = 0; i < linkElements.length; i++) {
     linkElements[i].addEventListener('click', function() {
       var link = this.getAttribute('link');
-      location.href = link;
+      location.href="https://www.google.co.jp";
     }, false);
   }
 </script>
