--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" animation-mixer></a-entity>
+<a-entity gltf-model="#model" class="link-object" scale="0.1 0.1 0.1" position="-1 1.25 0" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-entity ></a-entity>
 </a-marker>
 
-<a-text value="test" position=" -0.3 0 0.5" align="center" rotation="-90 0 0" color="#7993ff">
+<a-text position="-1 1.25 -3" value="Hello, World!" color="black"></a-text>
 </a-text>
 
 <!-- directional light shining from the top left.-->
