--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ gltfアニメ再生用-->
 
 <a-entity gltf-model="#model" class="link-object" scale="0.05 0.05 0.05" position="3 0 0" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
-<a-text position="-1 1.25 0" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
-<a-plane src="#img"  width="2" height="2" position="2 0 0" rotation="-90 0 0"></a-plane>
+<a-text position="-1 1.5 0" scale="0.1 0.1 0.1" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
+<a-plane src="#img"  width="0.5" height="0.5" position="2 0 0" rotation="-90 0 0"></a-plane>
 <!--a-plane src="#video"  width="5" height="5" position="0 10 0" rotation="-90 0 0"></a-plane-->
 </a-text>
 <a-entity ></a-entity>
