--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" src="./gltf/Pagoda.glb"></a-asset-item>
-  <img id="img" src="./face.png">
-  <img id="video" src="warp.mp4">
+  <!--img id="img" src="./face.png">
+  <img id="video" src="warp.mp4"-->
 </a-assets>
 
 <!-- マーカーを登録（hololo testマーカー） -->
@@ -44,7 +44,10 @@ gltfアニメ再生用-->
 
 <a-entity gltf-model="#model" class="link-object" scale="0.03 0.03 0.03" position="2 0 0" rotation="0 90 -90" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
-
+<a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
+<a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
+<!--a-plane src="#video"  width="5" height="5" position="0 10 0" rotation="-90 0 0"></a-plane-->
+</a-text>
 <a-entity ></a-entity>
 </a-marker>
 
