--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" src="./gltf/Pagoda.glb"></a-asset-item>
-  <!--img id="img" src="./face.png">
-  <img id="video" src="warp.mp4"-->
+  <img id="img" src="./face.png">
+  <video id="video" src="warp.mp4">
 </a-assets>
 
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" scale="0.03 0.03 0.03" position="2 0 0" rotation="0 90 -90" animation-mixer></a-entity>
+<a-entity gltf-model="#model" class="link-object" data-link="https://google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 0 -90" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
 <a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
@@ -62,9 +62,9 @@ gltfアニメ再生用-->
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
 <a-entity camera>
-<a-cursor fuse="false" fuse-timeout="3000" color="black" scale="2 2"></a-cursor>
+<a-cursor color="black" scale="2 2"></a-cursor>
 </a-entity>
-
+<!--fuse="true" fuse-timeout="3000" -->
 
   <!--
 <a-box id="target1" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
@@ -95,7 +95,7 @@ gltfアニメ再生用-->
   for (var i = 0; i < linkElements.length; i++) {
     linkElements[i].addEventListener('click', function() {
       var link = this.getAttribute('link');
-      location.href="https://www.google.co.jp";
+      location.href=link;
     }, false);
   }
 </script>
