--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ gltfアニメ再生用-->
 
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
-<a-entity camera>
+<a-camera>
 <a-cursor color="black" scale="2 2">
         <a-animation 
              begin="mouseenter" 
@@ -98,7 +98,7 @@ gltfアニメ再生用-->
              dur="0">
       </a-animation>
 </a-cursor>
-</a-entity>
+</a-camera>
 <!--fuse="true" fuse-timeout="3000" -->
 
   <!--
