--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ gltfアニメ再生用-->
 
 <!-- Dim ambient lighting. -->
 <!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
-<a-camera>
-<a-cursor color="black" scale="2 2">
+<a-entity camera>
+<a-entity cursor color="black" scale="2 2">
         <a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -97,8 +97,8 @@ gltfアニメ再生用-->
              to="black" 
              dur="0">
       </a-animation>
-</a-cursor>
-</a-camera>
+</a-entity>
+</a-entity>
 <!--fuse="true" fuse-timeout="3000" -->
 
   <!--
