--- a/index.html
+++ b/index.html
@@ -32,38 +32,16 @@ gltfアニメ再生用-->
  <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
-
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.png">
   <video id="video" crossOrigin="anonymous" src="warp.mp4">
 </a-assets>
 
-<!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" animation-mixer></a-entity>
-<!--link="href:https://www.google.co.jp"-->
-<a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
-<a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
-<!--a-plane src="#video"  width="5" height="5" position="0 10 0" rotation="-90 0 0"></a-plane-->
-</a-text>
-<a-entity ></a-entity>
-</a-marker>
-
-
-
-<!-- directional light shining from the top left.-->
-<!-- a-light color="white" position="-1 1 0" intensity="3" ></a-light-->
-
-<!-- point light, 5 meters in the air.-->
-<!--a-light type="point" color="white" position="0 5 0" intensity="3"></a-light-->
-
-<!-- Dim ambient lighting. -->
-<!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
-<a-entity camera>
-<a-entity cursor color="black" scale="2 2">
-        <a-animation 
+<a-camera>
+<a-cursor color="black" scale="2 2">
+        <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
              attribute="scale" 
@@ -96,10 +74,36 @@ gltfアニメ再生用-->
              from="red" 
              to="black" 
              dur="0">
-      </a-animation>
-</a-entity>
-</a-entity>
+      </a-animation-->
+</a-cursor>
+</a-camera>
 <!--fuse="true" fuse-timeout="3000" -->
+
+
+<!-- マーカーを登録（hololo testマーカー） -->
+<a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
+
+
+<a-entity gltf-model="#model" class="link-object" data-link="https://google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" animation-mixer></a-entity>
+<!--link="href:https://www.google.co.jp"-->
+<a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
+<a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
+<!--a-plane src="#video"  width="5" height="5" position="0 10 0" rotation="-90 0 0"></a-plane-->
+</a-text>
+<a-entity ></a-entity>
+</a-marker>
+
+
+
+<!-- directional light shining from the top left.-->
+<!-- a-light color="white" position="-1 1 0" intensity="3" ></a-light-->
+
+<!-- point light, 5 meters in the air.-->
+<!--a-light type="point" color="white" position="0 5 0" intensity="3"></a-light-->
+
+<!-- Dim ambient lighting. -->
+<!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
+
 
   <!--
 <a-box id="target1" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
