--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ gltfアニメ再生用-->
   for (var i = 0; i < linkElements.length; i++)
   {
     linkElements[i].addEventListener('click', function() {
-      var link = this.getAttribute('link');
+      var link = this.getAttribute('data-link');
       location.href=link;
     }, false);
   }
