--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 
 
 <a-camera>
-<a-cursor color="black" scale="2 2">
+<a-cursor fuse="false" color="black" scale="2 2">
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -127,6 +127,7 @@ gltfアニメ再生用-->
 
 </a-scene>
 <script>
+  /*
  var linkElements = document.getElementsByClassName("link-object");
   for (var i = 0; i < linkElements.length; i++)
   {
@@ -135,21 +136,22 @@ gltfアニメ再生用-->
       location.href=link;
     }, false);
   }
+  */
 
-/*
-  AFRAME.registerComponent('cursor-listener', {
-  init: function () {
+
+  AFRAME.registerComponent('cursor-listener',
+  {
+  init: function ()
+  {
     var linkElements = document.getElementsByClassName("link-object");
+    var link = this.getAttribute('link');
     this.el.addEventListener('click', function (evt)
-{
-   for (var i = 0; i < linkElements.length; i++) {
-    linkElements[i].addEventListener('click', function() {
-      var link = this.getAttribute('link');
+    {
       location.href=link;
     });
   }
-});
-*/
+  };
+
 </script>
 </body>
 </html>
