--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ gltfアニメ再生用-->
     var linkElements = document.getElementsByClassName("link-object");
     this.el.addEventListener('click', function (evt)
     {
-      var link = this.getAttribute('link');
+      var link = this.getAttribute('data-link');
       location.href=link;
     });
   }
