--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-camera>
+<a-entity camera look-controls mouse-cursor>
 <a-cursor fuse="false" color="black" scale="2 2">
         <!--a-animation 
              begin="mouseenter" 
@@ -76,7 +76,7 @@ gltfアニメ再生用-->
              dur="0">
       </a-animation-->
 </a-cursor>
-</a-camera>
+</a-entity>
 <!--fuse="true" fuse-timeout="3000" -->
 
 
@@ -127,7 +127,7 @@ gltfアニメ再生用-->
 
 </a-scene>
 <script>
-  /*
+
  var linkElements = document.getElementsByClassName("link-object");
   for (var i = 0; i < linkElements.length; i++)
   {
@@ -136,21 +136,10 @@ gltfアニメ再生用-->
       location.href=link;
     }, false);
   }
-  */
 
 
-  AFRAME.registerComponent('cursor-listener',
-  {
-  init: function ()
-  {
-    var linkElements = document.getElementsByClassName("link-object");
-    this.el.addEventListener('click', function (evt)
-    {
-      var link = this.getAttribute('data-link');
-      location.href=link;
-    });
-  }
-  };
+
+
 
 </script>
 </body>
