--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@ gltfアニメ再生用-->
 
 </a-scene>
 <script>
-/*
+
  var linkElements = document.getElementsByClassName("link-object");
   for (var i = 0; i < linkElements.length; i++)
   {
     linkElements[i].addEventListener('click', function() {
       var link = this.getAttribute('data-link');
-      location.href=link;
+      window.location.href=link;
     }, false);
   }
-*/
+
 
 
 
