--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera look-controls mouse-cursor>
-<a-cursor fuse="false" color="black" scale="2 2">
+<a-entity camera look-controls>
+<a-entity cursor="rayOrigin: mouse" fuse="false" color="black" scale="2 2">
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -75,7 +75,7 @@ gltfアニメ再生用-->
              to="black" 
              dur="0">
       </a-animation-->
-</a-cursor>
+</a-entity>
 </a-entity>
 <!--fuse="true" fuse-timeout="3000" -->
 
@@ -83,7 +83,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer></a-entity>
+<a-entity cursor-listener gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
 <a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
