--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ gltfアニメ再生用-->
 
 
 <a-entity camera look-controls>
-<a-cursor fuse="false" color="black" scale="2 2">
+<!--a-cursor fuse="false" color="black" scale="2 2"-->
+  <a-entity raycaster="objects: .clickable" cursor>
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -75,7 +76,7 @@ gltfアニメ再生用-->
              to="black" 
              dur="0">
       </a-animation-->
-</a-cursor>
+</a-entity>
 </a-entity>
 <!--fuse="true" fuse-timeout="3000" -->
 
@@ -83,7 +84,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" onclick="window.location.href='https://google.co.jp'" animation-mixer></a-entity>
+<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" class="clickable" onclick="location.href='https://google.co.jp'" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
 <a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
