--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ gltfアニメ再生用-->
 
 
 <a-entity camera look-controls>
-<a-entity cursor fuse="false" color="black" scale="2 2">
+<cursor="fuse: true; maxDistance: 30; timeout: 500"
+            position="0 0 -5"
+            geometry="primitive: ring"
+            material="color: white; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -83,9 +86,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity raycaster="objects: .clickable" cursor>
-</a-entity>
-<a-entity id="test" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" class="clickable" animation-mixer></a-entity>
+<a-entity id="test" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
 <a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
