--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ gltfアニメ再生用-->
 
 
 <a-entity camera look-controls>
-<cursor="fuse: true; maxDistance: 30; timeout: 500"
+<a-entity cursor="fuse: true; maxDistance: 30; timeout: 500"
             position="0 0 -5"
             geometry="primitive: ring"
             material="color: white; shader: flat">
