--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera look-controls>
+<a-entity camera>
 <a-entity cursor="fuse: true; maxDistance: 30; timeout: 500"
             position="0 0 -5"
             geometry="primitive: ring"
