--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ gltfアニメ再生用-->
 
 document.querySelector('#test').addEventListener('click', function () {
   window.location.href="https://www.google.co.jp"
+  console.log("ok")
 });
 
 
