--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera>
+<a-entity camera look-controls>
 <a-entity cursor="fuse: true; maxDistance: 30; timeout: 500"
             position="0 0 -5"
             geometry="primitive: ring"
@@ -86,7 +86,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity id="test" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" geometry="primitive: box" animation-mixer></a-entity>
+<a-entity id="test" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
 <a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
@@ -149,7 +149,7 @@ document.querySelector('#test').addEventListener('click', function () {
   }
 */
 
-/*
+
     AFRAME.registerComponent('cursor-listener', {
         init: function () {
 
@@ -159,7 +159,7 @@ document.querySelector('#test').addEventListener('click', function () {
             });
         }
     });
-    */
+
 
 
 
