--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ gltfアニメ再生用-->
 
 
 <a-entity camera look-controls>
-  <a-entity cursor="fuse: true; fuseTimeout: 500"
+  <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="0 0 -1"
-            geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+            geometry="primitive: ring; radiusInner: 20; radiusOuter: 30"
             material="color: black; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
