--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ gltfアニメ再生用-->
 <a-entity camera look-controls>
   <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="0 0 -1"
-            geometry="primitive: ring; radiusInner: 20; radiusOuter: 30"
+            geometry="primitive: ring"
+            scale="10 10 10"
             material="color: black; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
