--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@ gltfアニメ再生用-->
 <!--script src="./js/aframe-ar.min.js"></script-->
 </head>
 
+<script>
+    AFRAME.registerComponent('cursor-listener', {
+        init: function () {
+            this.el.addEventListener('click', function (evt) {
+                this.setAttribute('href', 'https://www.google.co.jp');
+                //console.log('I was clicked at: ', evt.detail.intersection.point);
+            });
+        }
+    });
+</script>
+
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;" cursor="rayOrigin: mouse">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
@@ -40,10 +51,10 @@ gltfアニメ再生用-->
 
 
 <a-entity camera look-controls>
-  <a-entity cursor="fuse: false; fuseTimeout: 500"
+  <a-entity cursor="rayOrigin: mouse"
             position="0 0 -1"
-            geometry="primitive: ring"
-            scale="10 10 10"
+            geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
+            scale="1 1 1"
             material="color: black; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
