--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ gltfアニメ再生用-->
     AFRAME.registerComponent('cursor-listener', {
         init: function () {
             this.el.addEventListener('click', function (evt) {
+              //↓超重要!
                 this.setAttribute('href', 'https://www.google.co.jp');
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
             });
@@ -52,6 +53,7 @@ gltfアニメ再生用-->
 
 <a-entity camera look-controls>
   <a-entity cursor="rayOrigin: mouse"
+            fuse="false"
             position="0 0 -1"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
             scale="1 1 1"
