--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@ gltfアニメ再生用-->
 
 
 <a-entity camera look-controls>
-  <a-entity cursor="rayOrigin: mouse"
-            cursor="fuse: false;"
+  <a-entity cursor="rayOrigin: mouse;fuse: false"
             position="0 0 -1"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
             scale="1 1 1"
