--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
-  <img id="img" crossOrigin="anonymous" src="./face.png">
+  <img id="img" crossOrigin="anonymous" src="./face.jpg">
   <video id="video" crossOrigin="anonymous" src="warp.mp4">
 </a-assets>
 
