--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ https://opensource.org/licenses/mit-license.php
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+<meta name="apple-mobile-web-app-capable" content="yes"/>
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
- <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
@@ -46,8 +46,8 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
-  <img id="img" crossOrigin="anonymous" src="./face.jpg">
-  <video id="video" crossOrigin="anonymous" src="warp.mp4">
+  <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
+  <video id="video" crossOrigin="anonymous" autoplay="false" playsinline loop="true" src="./warp.mp4"></video>
 </a-assets>
 
 
@@ -99,11 +99,11 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="2 0 0" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.02 0.02 0.02" position="2 0 0.5" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
-<a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Hello, World!" color="black" rotation="-90 0 0"></a-text>
-<a-plane src="#img"  width="0.8" height="0.8" position="1 0 0" rotation="-90 0 0"></a-plane>
-<!--a-plane src="#video"  width="5" height="5" position="0 10 0" rotation="-90 0 0"></a-plane-->
+<a-text position="0.7 0.01 0.5" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
+<a-box src="#img"  width="0.8" height="0.8" depth="0.03" position="1 0 0" rotation="-90 0 0"></a-box>
+<a-video src="#video" width="0.8" height="0.8" position="1 0 1" rotation="-90 0 0"></a-video>
 </a-marker>
 
 
