--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ gltfアニメ再生用-->
 </script>
 
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="video" crossOrigin="anonymous" src="./warp.mp4"　autoplay muted playsinline webkit-playsinline loop></video>
+  <video id="video" autoplay loop="true" playsinline webkit-playsinline src="./warp.mp4" muted></video>
 </a-assets>
 
 
