--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ gltfアニメ再生用-->
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="video" src="./warp.mp4" autoplay loop="true" playsinline webkit-playsinline muted></video>
+  <video id="video" src="./warp.mp4" ></video>
 </a-assets>
 
 
