--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ gltfアニメ再生用-->
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="video" crossOrigin="anonymous" autoplay="false" playsinline loop="true" src="warp.mp4"></video>
+  <video id="video" crossOrigin="anonymous" autoplay playsinline loop="true" src="warp.mp4"></video>
 </a-assets>
 
 
@@ -103,7 +103,7 @@ gltfアニメ再生用-->
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="0.7 0.01 0.5" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
 <a-box src="#img"  width="0.8" height="0.8" depth="0.03" position="1 0 0" rotation="-90 0 0"></a-box>
-<a-video src="#video" width="0.8" height="0.8" position="1 1 0" rotation="-90 0 0"></a-video>
+<a-video src="#video" width="1.6" height="0.9" position="1 0 1" rotation="-90 0 0"></a-video>
 </a-marker>
 
 
