--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ gltfアニメ再生用-->
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
                 this.setAttribute('src', "warp.mp4");
+                this.play();
             });
         }
     });
