--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@ gltfアニメ再生用-->
         init: function () {
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
-                this.setAttribute('src', "warp.mp4");
-                this.el.play();
+                this.setAttribute('src', "warp.mp4","play()");
             });
         }
     });
