--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ gltfアニメ再生用-->
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="0.7 0.01 0.5" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
 <a-box src="#img"  width="0.8" height="0.8" depth="0.03" position="1 0 0" rotation="-90 0 0"></a-box>
-<a-plane src="#vid" material="src:#vid" width="1.6" height="0.9" position="1 0 1" rotation="-90 0 0" play-listener></a-plane>
+<a-plane material="src:#vid" width="1.6" height="0.9" position="1 0 1" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
