--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ gltfアニメ再生用-->
       });
       this.el.addEventListener('click',function()
       {
-      this.setAttribute('src', "warp.mp4");
+      //this.setAttribute('src', "warp.mp4");
       vid.play();
       });
     }
