--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ gltfアニメ再生用-->
 <!--a-link href="tel:09084644360" title="My Homepage" image="#imga" position="-1 0 -1" scale="0.3 0.3 0.3" rotation="-90 0 0"></a-link-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
-<a-box id="box" width="0.7" height="0.7" depth="0.1" link="href:https://www.yahoo.co.jp" src="./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-box>
+<a-box id="box" width="0.7" height="0.7" depth="0.7" link="href:https://www.yahoo.co.jp" src="./face.jpg" position="0 0 0.9" rotation="0 0 0" tel-listener></a-box>
 
 <a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
