--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera look-controls>
+<a-entity camera>
 <!--a-entity camera look-controls-->
   <a-entity cursor="rayOrigin: mouse;fuse: false"
-            position="0.01 0.01 -2"
+            position="0 0 0"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
             material="color: white; shader: flat">
         <!--a-animation 
