--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false"  embedded arjs="debugUIEnabled:false;sourceType: webcam;trackingMethod:best;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false"  embedded arjs="debugUIEnabled:false;trackingMethod:best;">
   <!--embedded arjs="sourceType: webcam;"-->
-  <!--embedded arjs="debugUIEnabled:false;trackingMethod:best;"-->
+  <!--embedded arjs="debugUIEnabled:false;trackingMethod:best;"patternRatio:0.80; -->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
