--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false"  embedded arjs="debugUIEnabled:false;trackingMethod:best;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false"  embedded arjs="debugUIEnabled:false;trackingMethod:best;" arjs="patternRatio:0.80">
   <!--embedded arjs="sourceType: webcam;"-->
   <!--embedded arjs="debugUIEnabled:false;trackingMethod:best;"patternRatio:0.80; -->
 
