--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin: 0; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;patternRatio:0.80">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;patternRatio:0.80;trackingMethod: best; sourceType: webcam;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
