--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@ gltfアニメ再生用-->
 
 <!--a-entity camera look-controls-->
 <a-entity camera look-controls>
-  <a-entity cursor="fuse: false; fuseTimeout: 500"
-            position="0 0 -10"
+  <a-cursor></a-cursor>
+  <!--a-entity cursor="fuse: false; fuseTimeout: 500"
+            position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
             material="color: white; shader: flat">
         <!--a-animation 
@@ -172,8 +173,8 @@ gltfアニメ再生用-->
              from="red" 
              to="black" 
              dur="0">
-      </a-animation-->
-</a-entity>
+      </a-animation>
+</a-entity-->
 </a-entity>
 <!--fuse="true" fuse-timeout="3000" -->
 
