--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin: 0; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;patternRatio:0.80;trackingMethod: best; sourceType: webcam;">
-  <!--embedded arjs="sourceType: webcam;"-->
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
+  <!--embedded arjs="sourceType: webcam;trackingMethod: best;patternRatio:0.80"-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
